--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.7",
+    "base-64": "^1.0.0",
+    "fbjs": "^3.0.5",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-paper": "^5.10.3",
     "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "^3.24.0",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
